Úprava pro produkci:
- odstraněn pirateshop
- odstraněno zaklikávání

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
           <img src="{{ 'assets/img/logo.svg' | prepend: site.baseurl }}" alt="Česká pirátská strana">
         </a>
       </div>
-      <h1>Rozcestník Pirátů pro Krajské volby 2016</h1>
+      <h1>Rozcestník Pirátů pro krajské volby 2016</h1>
     </div>
   </div>
 </div>
