--- a/_includes/js.html
+++ b/_includes/js.html
@@ -32,11 +32,19 @@
         $("#region-description>div").hide()
 
         var marked = null;
+        var i = 0;
         var reg_list = $('#regions-list');
+        var reg_list2 = $('#regions-list-2');
 
         $.each(regions, function(index, region) {
-          var li = $('<li/>').appendTo(reg_list);
-          var span = $('<a/>').text(region.name).attr('href',region.url).appendTo(li);
+          if(i < 7 ) {
+            var li = $('<li/>').appendTo(reg_list);
+            var span = $('<a/>').text(region.name).attr('href',region.url).appendTo(li);
+          } else {
+            var li2 = $('<li/>').appendTo(reg_list2);
+            var span2 = $('<a/>').text(region.name).attr('href',region.url).appendTo(li2);
+          }
+          i++;
 
           /* Create path for one region */
           var custom_attrs = {"title": region.name};
