--- a/_includes/candidate1.html
+++ b/_includes/candidate1.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="medium-2 columns">
-        <img src="{{ leader.foto | prepend: 'assets/img/candidates/' | prepend: site.baseurl }}" class="centered">
+        <img src="{{ leader.foto | prepend: 'assets/img/candidates/' | prepend: site.baseurl }}" class="centered" style="margin-top: 25px;">
     </div>
     <div class="medium-10 columns">
         <div class="row">
             <div class="medium-5 columns">
-                <h3{{leader.name}} ({{leader.age}})</h3> {{leader.profese}}
+                <h3>{{leader.name}} ({{leader.age}})</h3> {{leader.profese}}
             </div>
             <div class="medium-5 columns">
                 <h4>{{leader.region}}</h4> {{leader.kandidatka}}
