--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,5 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{{ 'css/main.css' | prepend: site.baseurl }}">
+    <link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.2.2/motion-ui.min.css' />
 </head>
