Program jako accordion

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,3 +22,18 @@
 
 // Import Objects
 @import 'objects/section';
+
+.orbit-bullets button {
+  //cursor: pointer;
+  //display: inline-block;
+  min-width: 10rem;
+  //height: 2rem;
+  //background: #cccccc;
+  //float: none;
+  //margin-right: 8px;
+  //border-radius: 5px;
+}
+
+.accordion-title {
+  font-size: 115%;
+}
