--- a/_includes/program.html
+++ b/_includes/program.html
@@ -1,21 +1,21 @@
-<h1>Otevřeme hospodaření kraje</h1>
+<h1 id="hospodareni">Otevřeme hospodaření kraje</h1>
 
 <ul class="accordion" data-accordion data-allow-all-closed="true">
     <li class="accordion-item" data-accordion-item>
-        <a href="#" class="accordion-title">Zprůhledníme financování</a>
+        <a href="#" id="zpruhlednime" class="accordion-title">Zprůhledníme financování</a>
         <div class="accordion-content" data-tab-content>
           {% include program/1-1-financovani.html %}
         </div>
     </li>
     <li class="accordion-item" data-accordion-item>
-        <a href="#" class="accordion-title">Budeme hospodařit efektivně</a>
+        <a href="#" id="zefektivnime" class="accordion-title">Budeme hospodařit efektivně</a>
         <div class="accordion-content" data-tab-content>
           {% include program/1-2-hospodareni.html %}
         </div>
     </li>
 </ul>
 
-<h1>Víme, jak řídit kraj zodpovědně</h1>
+<h1 id="zodpovednost">Víme, jak řídit kraj zodpovědně</h1>
 
 <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
   <li class="accordion-item" data-accordion-item>
@@ -26,22 +26,22 @@
   </li>
 </ul>
 
-<h1>Zapojíme občany do rozhodování</h1>
+<h1 id="zapojime">Zapojíme občany do rozhodování</h1>
 
 <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
-    <li class="accordion-item" data-accordion-item>
+    <li class="accordion-item" data-accordion-item id="otevrene">
         <a href="#" class="accordion-title">Jednáme s lidmi otevřeně</a>
         <div class="accordion-content" data-tab-content>
           {% include program/3-1-jedname-otevrene.html %}
         </div>
     </li>
-    <li class="accordion-item" data-accordion-item>
+    <li class="accordion-item" data-accordion-item id="informace">
         <a href="#" class="accordion-title">Usnadníme přístup k informacím</a>
         <div class="accordion-content" data-tab-content>
           {% include program/3-2-usnadninme-infopristup.html %}
         </div>
     </li>
-    <li class="accordion-item" data-accordion-item>
+    <li class="accordion-item" data-accordion-item id="aktivni-obcane" >
         <a href="#" class="accordion-title">Vyjdeme vstříc aktivním občanům</a>
         <div class="accordion-content" data-tab-content>
           {% include program/3-3-aktivni-obcane.html %}
@@ -49,28 +49,28 @@
     </li>
 </ul>
 
-<h1>Veřejné služby slouží občanům</h1>
+<h1 id="verejne-sluzby">Veřejné služby slouží občanům</h1>
 
 <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="kvalitni-verejne-sluzby">
         <a href="#" class="accordion-title">Dohlédneme na kvalitní a dostupné veřejné služby</a>
         <div class="accordion-content" data-tab-content>
           {% include program/4-1.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="dopravni-infrastruktura-s-koncepci">
         <a href="#" class="accordion-title">Dopravní infrastruktura s koncepcí a rozmyslem</a>
         <div class="accordion-content" data-tab-content>
           {% include program/4-2.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="dopravni-obsluznost">
         <a href="#" class="accordion-title">Zlepšíme dopravní obslužnost</a>
         <div class="accordion-content" data-tab-content>
           {% include program/4-3.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="cestovni-ruch">
         <a href="#" class="accordion-title">Využijeme příležitosti pro cestovní ruch</a>
         <div class="accordion-content" data-tab-content>
           {% include program/4-4.html %}
@@ -78,22 +78,22 @@
     </li>
 </ul>
 
-<h1>Prosadíme moderní technologie</h1>
+<h1 id="moderni-technologie">Prosadíme moderní technologie</h1>
 
 <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="kontakt-s-urady">
         <a href="#" class="accordion-title">Usnadníme občanům styk s úřady</a>
         <div class="accordion-content" data-tab-content>
           {% include program/5-1.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="osvobodime-software">
         <a href="#" class="accordion-title">Osvobodíme software a formáty</a>
         <div class="accordion-content" data-tab-content>
           {% include program/5-2.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="internet-pro-vsechny">
         <a href="#" class="accordion-title">Internet pro všechny</a>
         <div class="accordion-content" data-tab-content>
           {% include program/5-3.html %}
@@ -101,22 +101,22 @@
     </li>
 </ul>
 
-<h1>Investujeme do vzdělání</h1>
+<h1 id="investujeme-do-vzdelani">Investujeme do vzdělání</h1>
 
 <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="kvalitni-vzdelani">
         <a href="#" class="accordion-title">Kvalitní školy se nám vyplatí</a>
         <div class="accordion-content" data-tab-content>
           {% include program/6-1.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="samovzdelani">
         <a href="#" class="accordion-title">Usnadníme lidem samostatné vzdělávání</a>
         <div class="accordion-content" data-tab-content>
           {% include program/6-2.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="kultura-a-sport">
         <a href="#" class="accordion-title">Podporujeme kulturu a sport</a>
         <div class="accordion-content" data-tab-content>
           {% include program/6-3.html %}
@@ -124,22 +124,22 @@
     </li>
 </ul>
 
-<h1>Zajistíme kvalitní zdravotní a sociální služby</h1>
+<h1 id="zdravotnictvi">Zajistíme kvalitní zdravotní a sociální služby</h1>
 
 <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="financovani-zdravotnictvi">
         <a href="#" class="accordion-title">Vyřešíme financování zdravotnictví</a>
         <div class="accordion-content" data-tab-content>
           {% include program/7-1.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="socialni-sluzby">
         <a href="#" class="accordion-title">Kvalita a osobní přístup v sociálních službách</a>
         <div class="accordion-content" data-tab-content>
           {% include program/7-2.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="prace">
         <a href="#" class="accordion-title">Dáme lidem šanci najít práci</a>
         <div class="accordion-content" data-tab-content>
           {% include program/7-3.html %}
@@ -147,22 +147,22 @@
     </li>
 </ul>
 
-<h1>Chráníme životní prostředí</h1>
+<h1 id="zivotni-prostredi">Chráníme životní prostředí</h1>
 
 <ul class="accordion" data-accordion data-multi-expand="true" data-allow-all-closed="true">
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="ekologicke-zateze">
         <a href="#" class="accordion-title">Odstraňujeme ekologické zátěže</a>
         <div class="accordion-content" data-tab-content>
           {% include program/8-1.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="energetika-na-inovacich">
         <a href="#" class="accordion-title">Energetiku stavíme na inovacích</a>
         <div class="accordion-content" data-tab-content>
           {% include program/8-2.html %}
         </div>
     </li>
-    <li class="accordion-item strong" data-accordion-item>
+    <li class="accordion-item strong" data-accordion-item id="ekologicky-rozvoj">
         <a href="#" class="accordion-title">Ekologicky rozvíjíme města i krajinu</a>
         <div class="accordion-content" data-tab-content>
           {% include program/8-3.html %}
