--- a/_includes/program/content.html
+++ b/_includes/program/content.html
@@ -15,103 +15,103 @@
                                 <h4 class="c-widget-accordion-list__heading">Společný program pro<br>krajské volby 2016</h4>
                                 <ul class="c-widget-accordion-list">
                                     <li>
-                                        <a href="#">Otevřeme hospodaření kraje</a>
+                                        <a href="#hospodareni">Otevřeme hospodaření kraje</a>
                                         <ul>
                                             <li>
-                                                <a href="#">Zprůhledníme financování</a>
+                                                <a href="#zpruhlednime">Zprůhledníme financování</a>
                                             </li>
                                             <li>
-                                                <a href="#">Budeme hospodařit efektivně</a>
+                                                <a href="#zefektivnime">Budeme hospodařit efektivně</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Víme, jak řídit kraj zodpovědně</a>
+                                        <a href="#zodpovednost">Víme, jak řídit kraj zodpovědně</a>
                                     </li>
                                     <li>
-                                        <a href="#">Zapojíme občany do rozhodování</a>
+                                        <a href="#zapojime">Zapojíme občany do rozhodování</a>
                                         <ul>
                                             <li>
-                                                <a href="#">Jednáme s lidmi otevřeně</a>
+                                                <a href="#otevrene">Jednáme s lidmi otevřeně</a>
                                             </li>
                                             <li>
-                                                <a href="#">Usnadníme přístup k informacím</a>
+                                                <a href="#informace">Usnadníme přístup k informacím</a>
                                             </li>
                                             <li>
-                                                <a href="#">Vyjdeme vstříc aktivním občanům</a>
+                                                <a href="#aktivni-obcane">Vyjdeme vstříc aktivním občanům</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Veřejné služby slouží občanům</a>
+                                        <a href="#verejne-sluzby">Veřejné služby slouží občanům</a>
                                         <ul>
                                             <li>
-                                                <a href="#">Dohlédneme na kvalitní a dostupné veřejné služby</a>
+                                                <a href="#kvalitni-verejne-sluzby">Dohlédneme na kvalitní a dostupné veřejné služby</a>
                                             </li>
                                             <li>
-                                                <a href="#">Dopravní infrastruktura s koncepcí a rozmyslem</a>
+                                                <a href="#dopravni-infrastruktura-s-koncepci">Dopravní infrastruktura s koncepcí a rozmyslem</a>
                                             </li>
                                             <li>
-                                                <a href="#">Zlepšíme dopravní obslužnost</a>
+                                                <a href="#dopravni-obsluznost">Zlepšíme dopravní obslužnost</a>
                                             </li>
                                             <li>
-                                                <a href="#">Využijeme příležitosti pro cestovní ruch</a>
+                                                <a href="#cestovni-ruch">Využijeme příležitosti pro cestovní ruch</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Prosadíme moderní technologie</a>
+                                        <a href="#moderni-technologie">Prosadíme moderní technologie</a>
                                         <ul>
                                             <li>
-                                                <a href="#">Usnadníme občanům styk s úřady</a>
+                                                <a href="#kontakt-s-urady">Usnadníme občanům styk s úřady</a>
                                             </li>
                                             <li>
-                                                <a href="#">Osvobodíme software a formáty</a>
+                                                <a href="#osvobodime-software">Osvobodíme software a formáty</a>
                                             </li>
                                             <li>
-                                                <a href="#">Internet pro všechny</a>
+                                                <a href="#internet-pro-vsechny">Internet pro všechny</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Investujeme do vzdělání</a>
+                                        <a href="#investujeme-do-vzdelani">Investujeme do vzdělání</a>
                                         <ul>
                                             <li>
-                                                <a href="#">Kvalitní školy se nám vyplatí</a>
+                                                <a href="#kvalitni-vzdelani">Kvalitní školy se nám vyplatí</a>
                                             </li>
                                             <li>
-                                                <a href="#">Usnadníme lidem samostatné vzdělávání</a>
+                                                <a href="#samovzdelani">Usnadníme lidem samostatné vzdělávání</a>
                                             </li>
                                             <li>
-                                                <a href="#">Podporujeme kulturu a sport</a>
+                                                <a href="#kultura-a-sport">Podporujeme kulturu a sport</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Zajistíme kvalitní zdravotní a sociální služby</a>
+                                        <a href="#zdravotnictvi">Zajistíme kvalitní zdravotní a sociální služby</a>
                                         <ul>
                                             <li>
-                                                <a href="#">Vyřešíme financování zdravotnictví</a>
+                                                <a href="#financovani-zdravotnictvi">Vyřešíme financování zdravotnictví</a>
                                             </li>
                                             <li>
-                                                <a href="#">Kvalita a osobní přístup v sociálních službách</a>
+                                                <a href="#socialni-sluzby">Kvalita a osobní přístup v sociálních službách</a>
                                             </li>
                                             <li>
-                                                <a href="#">Dáme lidem šanci najít práci</a>
+                                                <a href="#prace">Dáme lidem šanci najít práci</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Chráníme životní prostředí</a>
+                                        <a href="#zivotni-prostredi">Chráníme životní prostředí</a>
                                         <ul>
                                             <li>
-                                                <a href="#">Odstraňujeme ekologické zátěže</a>
+                                                <a href="#ekologicke-zateze">Odstraňujeme ekologické zátěže</a>
                                             </li>
                                             <li>
-                                                <a href="#">Energetiku stavíme na inovacích</a>
+                                                <a href="#energetika-na-inovacich">Energetiku stavíme na inovacích</a>
                                             </li>
                                             <li>
-                                                <a href="#">Ekologicky rozvíjíme města i krajinu </a>
+                                                <a href="#ekologicky-rozvoj">Ekologicky rozvíjíme města i krajinu </a>
                                             </li>
                                         </ul>
                                     </li>
