--- a/_includes/js.html
+++ b/_includes/js.html
@@ -24,12 +24,12 @@
         var settings = {{ site.data.kraje-settings | jsonify }};
         var regions = {{ site.data.kraje | jsonify }};
 
-        $(settings.id).width(settings.size.width)
+        $(settings.id).width(settings.size.width);
         $(settings.id).height(settings.size.height);
         var R = Raphael(settings.id, settings.size.width, settings.size.height);
 
 
-        $("#region-description>div").hide()
+        $("#region-description>div").hide();
 
         var marked = null;
         var i = 0;
@@ -68,16 +68,16 @@
               /* Functions */
               var click = function() {
                 window.open(region.url);
-              }
+              };
               var dblclick = function() {
                 window.open(region.url);
-              }
+              };
               var over = function() {
                 path.animate({fill: region.color}, 500).attr({'cursor': "pointer"});
-              }
+              };
               var out = function() {
                 path.animate({fill: "#333"}, 500);
-              }
+              };
 
               path[0].onclick = click;
               path[0].ondblclick = dblclick;
