--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="o-section-inner">
     <div class="row">
       <div class="medium-12 large-6 u-stacked-medium-down columns">
-        <img src="{{ '/assets/img/logo.svg' | prepnd: site.baseurl}}" style="width: 170px" alt="Česká pirátská strana" class="u-center-medium-down u-10paddingTop">
+        <img src="{{ 'assets/img/logo.svg' | prepnd: site.baseurl }}" style="width: 170px" alt="Česká pirátská strana" class="u-center-medium-down u-10paddingTop">
         <p class="u-0margin u-noWrap u-50paddingTop u-smaller-line-height show-for-large">
           <span class="u-mirror-horizontally">&copy;</span> Piráti, 2016. Všechna práva vyhlazena. Sdílejte a nechte ostatní sdílet
           <br>za stejných podmínek. <a href="#">Podmínky použití</a>.</p>
