--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -105,7 +105,7 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: 'Fira Sans', Helvetica, Roboto, Arial, sans-serif;
+$header-font-family: Helvetica, Roboto, Arial, sans-serif;
 $header-font-weight: $global-weight-normal;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
