--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,17 +8,13 @@
     <!-- social metas -->
     <meta property="og:title" content="Česká pirátská strana - Pirati.CZ">
     <meta property="og:site_name" content="Pirati.CZ"/>
-    <meta property="og:url" content="https://www.pirati.cz/portal">
+    <meta property="og:url" content="https://www.pirati.cz/">
     <meta property="og:type" content="website">
 
-    <meta property="og:image" content="https://www.pirati.cz/lib/tpl/pirati/images/fblogotyp.png"/>
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="1200" />
-    <meta property="og:image" content="https://www.pirati.cz/lib/tpl/pirati/images/fblogo.png"/>
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="1200" />
+    <meta property="og:image" content="https://www.pirati.cz/assets/img/banner_desktop.jpg"/>
+    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:width" content="1300" />
+    <meta property="og:image:height" content="360" />
     <meta property="og:description" content="Cílem Pirátské strany je na prvním místě prosazování základního práva člověka na svobodné šíření informací a striktní ochranu soukromí občana."/>
     <meta property="fb:admins" content="1609075674"/>
     <meta property="fb:admins" content="1734211895"/>
