--- a/_includes/candidate1.html
+++ b/_includes/candidate1.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="medium-2 columns">
-        <img src="{{ leader.foto | prepend: '/assets/img/candidates/' }}" class="centered" style="margin-top: 25px;">
+        <img src="{{ leader.foto | prepend: '/assets/img/candidates/' | relative_url }}" class="centered" style="margin-top: 25px;">
     </div>
     <div class="medium-10 columns">
         <div class="row">
