--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -2,7 +2,7 @@
 <div class="reveal large" id="{{leader.id}}" data-reveal>
   <div class="row">
     <div class="columns medium-3">
-      <img src="{{ leader.foto | prepend: 'assets/img/candidates/' }}" class="centered" style="margin-top: 20px;">
+      <img src="{{ leader.foto | prepend: 'assets/img/candidates/' | relative_url }}" class="centered" style="margin-top: 20px;">
     </div>
     <div class="columns medium-9">
       <div class="row">
